WIP.game over screen

--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
                >> Restart
             </div>
         </div>
+        <div id="game-start-layer">
+            <div role="button" onclick="startGame()" class = "restart-button">
+                One player game
+             </div>
+        </div>
+        <div id="game-over-layer">
+            <div class = 'game-over'>
+                GAME OVER
+            </div>
+            <div role="button" onclick="restartGame()" class = "restart-button">
+                >> Start
+             </div>
+        </div>
         <div id="scores-layer" width = 1580  class = 'scores'>
             <div  class = "scores-data">
                 <div>Mario</div>
