start game screen commented out

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
                >> Restart
             </div>
         </div>
-        <div id="game-start-layer">
+       <!--  <div id="game-start-layer">
             <div role="button" onclick="startGame()" class = "restart-button">
                 One player game
              </div>
-        </div>
+        </div> -->
         <div id="game-over-layer">
             <div class = 'game-over'>
                 GAME OVER
